--- a/config/Localization/metratech.com/metratech.com_accountcreation_de.xml
+++ b/config/Localization/metratech.com/metratech.com_accountcreation_de.xml
@@ -128,11 +128,11 @@
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/accountcreation/AuthenticationType/ActiveDirectory</Name>
-            <Value>metratech.com/accountcreation/AuthenticationType/ActiveDirectory</Value>
+            <Value>LDAP Authentication</Value>
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/accountcreation/AuthenticationType/MetraNetInternal</Name>
-            <Value>metratech.com/accountcreation/AuthenticationType/MetraNetInternal</Value>
+            <Value>MetraNet Authentication</Value>
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/accountcreation/billable</Name>
@@ -332,11 +332,11 @@
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/accountcreation/SecurityQuestion/FirstSchool</Name>
-            <Value>metratech.com/accountcreation/SecurityQuestion/FirstSchool</Value>
+            <Value>[DE]What is the name of the first school you attended?</Value>
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/accountcreation/SecurityQuestion/MothersMaidenName</Name>
-            <Value>metratech.com/accountcreation/SecurityQuestion/MothersMaidenName</Value>
+            <Value>[DE]What was your childhood nickname?</Value>
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/accountcreation/SecurityQuestion/None</Name>
@@ -344,11 +344,11 @@
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/accountcreation/SecurityQuestion/PIN</Name>
-            <Value>metratech.com/accountcreation/SecurityQuestion/PIN</Value>
+            <Value>[DE]What was the name of your first car?</Value>
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/accountcreation/SecurityQuestion/SSN</Name>
-            <Value>metratech.com/accountcreation/SecurityQuestion/SSN</Value>
+            <Value>[DE]What school did you attend for sixth grade?</Value>
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/accountcreation/startday</Name>
