--- a/config/Localization/metratech.com/metratech.com_accountcreation_es-MX.xml
+++ b/config/Localization/metratech.com/metratech.com_accountcreation_es-MX.xml
@@ -128,11 +128,11 @@
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/accountcreation/AuthenticationType/ActiveDirectory</Name>
-            <Value>metratech.com/accountcreation/AuthenticationType/ActiveDirectory</Value>
+            <Value>[es-MX]LDAP Authentication</Value>
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/accountcreation/AuthenticationType/MetraNetInternal</Name>
-            <Value>metratech.com/accountcreation/AuthenticationType/MetraNetInternal</Value>
+            <Value>[es-MX]MetraNet Authentication</Value>
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/accountcreation/billable</Name>
@@ -228,7 +228,7 @@
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/accountcreation/InvoiceMethod/StandardWithBillMessages</Name>
-            <Value>[ES-MX] Standard With Bill Messages</Value>
+            <Value>[es-MX]Standard With Bill Messages</Value>
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/accountcreation/Language</Name>
@@ -332,7 +332,7 @@
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/accountcreation/SecurityQuestion/FirstSchool</Name>
-            <Value>metratech.com/accountcreation/SecurityQuestion/FirstSchool</Value>
+            <Value>[es-MX]What is the name of the first school you attended?</Value>
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/accountcreation/SecurityQuestion/MothersMaidenName</Name>
