--- a/config/Localization/metratech.com/metratech.com_internal_es.xml
+++ b/config/Localization/metratech.com/metratech.com_internal_es.xml
@@ -11,6 +11,10 @@
             <Value>Divisa</Value>
         </locale_entry>
         <locale_entry>
+            <Name>metratech.com/Internal/Division</Name>
+            <Value>[ES]Division</Value>
+        </locale_entry>
+        <locale_entry>
             <Name>metratech.com/internal/Folder</Name>
             <Value>Carpeta</Value>
         </locale_entry>
@@ -21,6 +25,22 @@
         <locale_entry>
             <Name>metratech.com/internal/Language</Name>
             <Value>Idioma</Value>
+        </locale_entry>
+        <locale_entry>
+            <Name>metratech.com/Internal/MetraTaxCountryEligibility</Name>
+            <Value>[ES]MetraTax Country Eligibilty</Value>
+        </locale_entry>
+        <locale_entry>
+            <Name>metratech.com/Internal/MetraTaxCountryZone</Name>
+            <Value>[ES]MetraTax Country Zone</Value>
+        </locale_entry>
+        <locale_entry>
+            <Name>metratech.com/Internal/MetraTaxHasOverrideBand</Name>
+            <Value>[ES]MetraTax Has Override Band</Value>
+        </locale_entry>
+        <locale_entry>
+            <Name>metratech.com/Internal/MetraTaxOverrideBand</Name>
+            <Value>[ES]MetraTax Override Band</Value>
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/internal/PaymentMethod</Name>
@@ -39,6 +59,10 @@
             <Value>Pregunta de seguridad</Value>
         </locale_entry>
         <locale_entry>
+            <Name>metratech.com/internal/SecurityQuestionText</Name>
+            <Value>[ES]Custom Security Question</Value>
+        </locale_entry>
+        <locale_entry>
             <Name>metratech.com/internal/StatusReason</Name>
             <Value>Motivo del estado</Value>
         </locale_entry>
@@ -51,8 +75,32 @@
             <Value>Exento de impuestos</Value>
         </locale_entry>
         <locale_entry>
+            <Name>metratech.com/Internal/TaxExemptEndDate</Name>
+            <Value>[ES]Tax Exempt End Date</Value>
+        </locale_entry>
+        <locale_entry>
             <Name>metratech.com/internal/TaxExemptID</Name>
             <Value>ID de la exención tributaria</Value>
+        </locale_entry>
+        <locale_entry>
+            <Name>metratech.com/Internal/TaxExemptReason</Name>
+            <Value>[ES]Tax Exempt Reason</Value>
+        </locale_entry>
+        <locale_entry>
+            <Name>metratech.com/Internal/TaxExemptStartDate</Name>
+            <Value>[ES]Tax Exempt Start Date</Value>
+        </locale_entry>
+        <locale_entry>
+            <Name>metratech.com/Internal/TaxRegistryReference</Name>
+            <Value>[ES]Tax Registry Reference</Value>
+        </locale_entry>
+        <locale_entry>
+            <Name>metratech.com/Internal/TaxServiceAddressPCode</Name>
+            <Value>[ES]Tax Service Address PCode</Value>
+        </locale_entry>
+        <locale_entry>
+            <Name>metratech.com/Internal/TaxVendor</Name>
+            <Value>[ES]Tax Vendor</Value>
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/internal/TimezoneID</Name>
@@ -61,6 +109,10 @@
         <locale_entry>
             <Name>metratech.com/internal/UsageCycleType</Name>
             <Value>Ciclo de facturación</Value>
+        </locale_entry>
+        <locale_entry>
+            <Name>metratech.com/Internal/UseStdImpliedTaxAlg</Name>
+            <Value>[ES]Use Standard Inclusive Tax Calculation</Value>
         </locale_entry>
     </locale_space>
 </mt_config>
