--- a/config/Localization/metratech.com/metratech.com_internal_fr.xml
+++ b/config/Localization/metratech.com/metratech.com_internal_fr.xml
@@ -11,6 +11,10 @@
             <Value>Devise</Value>
         </locale_entry>
         <locale_entry>
+            <Name>metratech.com/Internal/Division</Name>
+            <Value>[FR]Division</Value>
+        </locale_entry>
+        <locale_entry>
             <Name>metratech.com/internal/Folder</Name>
             <Value>Dossier</Value>
         </locale_entry>
@@ -21,6 +25,22 @@
         <locale_entry>
             <Name>metratech.com/internal/Language</Name>
             <Value>Langue</Value>
+        </locale_entry>
+        <locale_entry>
+            <Name>metratech.com/Internal/MetraTaxCountryEligibility</Name>
+            <Value>[FR]MetraTax Country Eligibilty</Value>
+        </locale_entry>
+        <locale_entry>
+            <Name>metratech.com/Internal/MetraTaxCountryZone</Name>
+            <Value>[FR]MetraTax Country Zone</Value>
+        </locale_entry>
+        <locale_entry>
+            <Name>metratech.com/Internal/MetraTaxHasOverrideBand</Name>
+            <Value>[FR]MetraTax Has Override Band</Value>
+        </locale_entry>
+        <locale_entry>
+            <Name>metratech.com/Internal/MetraTaxOverrideBand</Name>
+            <Value>[FR]MetraTax Override Band</Value>
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/internal/PaymentMethod</Name>
@@ -39,6 +59,10 @@
             <Value>Question de sécurité</Value>
         </locale_entry>
         <locale_entry>
+            <Name>metratech.com/internal/SecurityQuestionText</Name>
+            <Value>[FR]Custom Security Question</Value>
+        </locale_entry>
+        <locale_entry>
             <Name>metratech.com/internal/StatusReason</Name>
             <Value>Raison du statut</Value>
         </locale_entry>
@@ -51,8 +75,32 @@
             <Value>Exempt de taxe</Value>
         </locale_entry>
         <locale_entry>
+            <Name>metratech.com/Internal/TaxExemptEndDate</Name>
+            <Value>[FR]Tax Exempt End Date</Value>
+        </locale_entry>
+        <locale_entry>
             <Name>metratech.com/internal/TaxExemptID</Name>
             <Value>ID d'exemption de taxe</Value>
+        </locale_entry>
+        <locale_entry>
+            <Name>metratech.com/Internal/TaxExemptReason</Name>
+            <Value>[FR]Tax Exempt Reason</Value>
+        </locale_entry>
+        <locale_entry>
+            <Name>metratech.com/Internal/TaxExemptStartDate</Name>
+            <Value>[FR]Tax Exempt Start Date</Value>
+        </locale_entry>
+        <locale_entry>
+            <Name>metratech.com/Internal/TaxRegistryReference</Name>
+            <Value>[FR]Tax Registry Reference</Value>
+        </locale_entry>
+        <locale_entry>
+            <Name>metratech.com/Internal/TaxServiceAddressPCode</Name>
+            <Value>[FR]Tax Service Address PCode</Value>
+        </locale_entry>
+        <locale_entry>
+            <Name>metratech.com/Internal/TaxVendor</Name>
+            <Value>[FR]Tax Vendor</Value>
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/internal/TimezoneID</Name>
@@ -61,6 +109,10 @@
         <locale_entry>
             <Name>metratech.com/internal/UsageCycleType</Name>
             <Value>Cycle de facturation</Value>
+        </locale_entry>
+        <locale_entry>
+            <Name>metratech.com/Internal/UseStdImpliedTaxAlg</Name>
+            <Value>[FR]Use Standard Inclusive Tax Calculation</Value>
         </locale_entry>
     </locale_space>
 </mt_config>
