--- a/config/Localization/metratech.com/metratech.com_internal_jp.xml
+++ b/config/Localization/metratech.com/metratech.com_internal_jp.xml
@@ -11,6 +11,10 @@
             <Value>通貨</Value>
         </locale_entry>
         <locale_entry>
+            <Name>metratech.com/Internal/Division</Name>
+            <Value>[JA]Division</Value>
+        </locale_entry>
+        <locale_entry>
             <Name>metratech.com/internal/Folder</Name>
             <Value>フォルダ</Value>
         </locale_entry>
@@ -21,6 +25,22 @@
         <locale_entry>
             <Name>metratech.com/internal/Language</Name>
             <Value>言語</Value>
+        </locale_entry>
+        <locale_entry>
+            <Name>metratech.com/Internal/MetraTaxCountryEligibility</Name>
+            <Value>[JA]MetraTax Country Eligibilty</Value>
+        </locale_entry>
+        <locale_entry>
+            <Name>metratech.com/Internal/MetraTaxCountryZone</Name>
+            <Value>[JA]MetraTax Country Zone</Value>
+        </locale_entry>
+        <locale_entry>
+            <Name>metratech.com/Internal/MetraTaxHasOverrideBand</Name>
+            <Value>[JA]MetraTax Has Override Band</Value>
+        </locale_entry>
+        <locale_entry>
+            <Name>metratech.com/Internal/MetraTaxOverrideBand</Name>
+            <Value>[JA]MetraTax Override Band</Value>
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/internal/PaymentMethod</Name>
@@ -39,6 +59,10 @@
             <Value>セキュリティの質問</Value>
         </locale_entry>
         <locale_entry>
+            <Name>metratech.com/internal/SecurityQuestionText</Name>
+            <Value>[JA]Custom Security Question</Value>
+        </locale_entry>
+        <locale_entry>
             <Name>metratech.com/internal/StatusReason</Name>
             <Value>状況の理由</Value>
         </locale_entry>
@@ -51,8 +75,32 @@
             <Value>免税</Value>
         </locale_entry>
         <locale_entry>
+            <Name>metratech.com/Internal/TaxExemptEndDate</Name>
+            <Value>[JA]Tax Exempt End Date</Value>
+        </locale_entry>
+        <locale_entry>
             <Name>metratech.com/internal/TaxExemptID</Name>
             <Value>免税 ID</Value>
+        </locale_entry>
+        <locale_entry>
+            <Name>metratech.com/Internal/TaxExemptReason</Name>
+            <Value>[JA]Tax Exempt Reason</Value>
+        </locale_entry>
+        <locale_entry>
+            <Name>metratech.com/Internal/TaxExemptStartDate</Name>
+            <Value>[JA]Tax Exempt Start Date</Value>
+        </locale_entry>
+        <locale_entry>
+            <Name>metratech.com/Internal/TaxRegistryReference</Name>
+            <Value>[JA]Tax Registry Reference</Value>
+        </locale_entry>
+        <locale_entry>
+            <Name>metratech.com/Internal/TaxServiceAddressPCode</Name>
+            <Value>[JA]Tax Service Address PCode</Value>
+        </locale_entry>
+        <locale_entry>
+            <Name>metratech.com/Internal/TaxVendor</Name>
+            <Value>[JA]Tax Vendor</Value>
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/internal/TimezoneID</Name>
@@ -61,6 +109,10 @@
         <locale_entry>
             <Name>metratech.com/internal/UsageCycleType</Name>
             <Value>請求サイクル</Value>
+        </locale_entry>
+        <locale_entry>
+            <Name>metratech.com/Internal/UseStdImpliedTaxAlg</Name>
+            <Value>[JA]Use Standard Inclusive Tax Calculation</Value>
         </locale_entry>
     </locale_space>
 </mt_config>
